--- a/condition.ipynb
+++ b/condition.ipynb
@@ -37,9 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "consize name\n",
+      "Standard name, nothing special\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"enter your name\")\n",
     "if len(name) == 0:\n",
@@ -143,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
