--- a/strings.ipynb
+++ b/strings.ipynb
@@ -279,15 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2382713878.py, line 7)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nnnnnnn\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "str.isidentifier() takes no arguments (2 given)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[44], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(data.is())\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39misnumeric())\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39misdecimal())\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39misidentifier(\u001b[38;5;241m50\u001b[39m ,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshshshshshsh\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: str.isidentifier() takes no arguments (2 given)"
      ]
     }
    ],
@@ -298,14 +312,331 @@
     "print(data.isalnum())\n",
     "print(data.isnumeric())\n",
     "print(data.isdecimal())\n",
-    "print(data.is())\n",
-    "print(data.is())\n",
-    "print(data.is())\n",
-    "print(data.is())\n",
-    "print(data.is())\n",
-    "print(data.is())\n",
-    "print(data.is())\n",
-    "print(data.is())"
+    "print(data.isidentifier(50 ,\"shshshshshsh\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-utility functions\n",
+    "- split()\n",
+    "- join\n",
+    "- find\n",
+    "- replace\n",
+    "- index\n",
+    "- count\n",
+    "- strip \n",
+    "imp func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentance = \"all the glitter is not gold\"\n",
+    "sentance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = sentance.split()\n",
+    "for word in words:\n",
+    "         print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'sfjmfmss,,sdsn',\n",
+       " 'sdnnvsnsnsn,nnnnc',\n",
+       " 'jmmdmdmmdnndnd,nnvfdn',\n",
+       " 'nnfvnnfdnnfdn,jsdj jsjfj fjksf idsk']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poem = \"\"\"\n",
+    "sfjmfmss,,sdsn\n",
+    "sdnnvsnsnsn,nnnnc\n",
+    "jmmdmdmmdnndnd,nnvfdn\n",
+    "nnfvnnfdnnfdn,jsdj jsjfj fjksf idsk\n",
+    "\"\"\"\n",
+    "poem.splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'm', 'huzaifa', 'and', 'i', 'm', 'here', 'lol']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "huzaifa = \"i m huzaifa and i m here lol\"\n",
+    "huzaifa.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c', 'd', 'e', 'f']\n",
+      "c/d/e/f\n"
+     ]
+    }
+   ],
+   "source": [
+    "addr = [\"c\", \"d\", \"e\" , \"f\"]\n",
+    "print(addr)\n",
+    "full_addr = \"/\".join(addr)\n",
+    "print(full_addr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentance = input(\"enter a sentance\")\n",
+    "words = sentance.split()\n",
+    "for word in words:\n",
+    "    size = len(word)\n",
+    "    if size % 2 != 0:\n",
+    "        print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "10\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'this is a message'\n",
+    "print(a.find('is'))\n",
+    "print(a.find('mess'))\n",
+    "print(a.find(\"is\"))\n",
+    "print(a.find(\"is\"))\n",
+    "print(a.find(\"is\"))\n",
+    "print(a.find(\"is\"))\n",
+    "print(a.find(\"are\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a message\n",
+      "thwas was a message\n",
+      "khis is a lekter\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "b = a.replace(\"is\", \"was\")\n",
+    "print(b)\n",
+    "c = b.replace(\"message\",  \"letter\").replace(\"was\" , 'is')\n",
+    "d = c.replace(\"t\",\"k\" , 2) # replace only 2 occurence\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace as remove\n",
+    "data = \"he!!!!llo\"\n",
+    "data.replace('!','')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wap to remove all vowels from a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wlcom to my world'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"welcome to my world\".replace('a','').replace('e','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = 'one two three one two'\n",
+    "print(msg.count(\"0\"))\n",
+    "print(msg.count(\"e\"))\n",
+    "print(msg.count(\"one\"))\n",
+    "print(msg.count(\"four\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13   alex mercer\n",
+      "11 alex mercer\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = '  alex mercer'\n",
+    "print(len(name), name)\n",
+    "clean_name = name.strip()\n",
+    "print(len(clean_name),clean_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'''python \n",
+    "names = [\n",
+    "    'john',\n",
+    "    'alex'\n",
+    "    'jane'\n",
+    "    'alexa'\n",
+    "    'jacob'\n",
+    "]\n",
+    "display this datta after removing all leading and trailing spaces and maxing it upper case\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "Alex\n",
+      "Jane\n",
+      "Alexa\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['john' , 'alex' , 'jane' , 'alexa']\n",
+    "for i in names:\n",
+    "    print(i.strip().title())\n",
+    "  \n"
    ]
   }
  ],
