--- a/practice/practice.ipynb
+++ b/practice/practice.ipynb
@@ -2,27 +2,597 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2287764613.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[17], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    y = int((input)\"value of the number\")\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "u\n",
+      "z\n",
+      "a\n",
+      "i\n",
+      "f\n",
+      "a\n"
      ]
     }
    ],
    "source": [
-    "y = int((input)\"value of the number\")\n",
-    "if:\n",
-    "    y>19:\n",
-    "    print(\"this is true\")\n",
-    "else:\n",
-    "    print(\"this is false\")\n",
-    "  "
+    "huzaifa = 'huzaifa'\n",
+    "for i in huzaifa:\n",
+    "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "u\n",
+      "z\n",
+      "a\n",
+      "i\n",
+      "f\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "khan = 'huzaifa'\n",
+    "for a in khan:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n",
+      "four\n"
+     ]
+    }
+   ],
+   "source": [
+    "huzaifa = ['one' , 'two' , 'three' , \"four\" ]\n",
+    "for khan in huzaifa:\n",
+    "    print(khan)\n",
+    "    if (khan == \"b\"):\n",
+    "         print('yes its equal')\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "khan = range(5)\n",
+    "for i in khan:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n"
+     ]
+    }
+   ],
+   "source": [
+    "khan = range(1 , 60)\n",
+    "for i in khan:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k\n",
+      "h\n",
+      "a\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "huzaifa = ('khan')\n",
+    "for i in huzaifa:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n",
+      "9\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "khan = range(1,17,4)\n",
+    "for i in khan:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "yes its equal\n",
+      "b\n",
+      "no\n",
+      "c\n",
+      "no\n",
+      "d\n",
+      "no\n",
+      "e\n",
+      "no\n"
+     ]
+    }
+   ],
+   "source": [
+    "khan = ['a','b','c','d','e']\n",
+    "for i in khan:\n",
+    "    print(i)\n",
+    "    b = (a)\n",
+    "    if (i == b):\n",
+    "\n",
+    "        print(\"yes its equal\")\n",
+    "    else: \n",
+    "        print(\"no\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huzaifa\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (\"huzaifa\")\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 length\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the string is: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Enter a string: \")\n",
+    "\n",
+    "length= len(a)\n",
+    "print(\"Length of the string is:\", length)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the last word of the string Python is great using slices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last word of the string is: great\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "A = \"Python is great\"\n",
+    "words = A.split()\n",
+    "lastword = words[-1]\n",
+    "print(\"Last word of the string is:\", lastword)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the string How are you? in uppercase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uppercase string: HOW ARE YOU?\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a = \"How are you?\"\n",
+    "upperstring = a.upper()\n",
+    "print(\"Uppercase string:\", upperstring)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the string How Is It Going? in lowercase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a = \"How Is It Going?\"\n",
+    "lowercasestring = a.lower()\n",
+    "print(\"Lowercase string:\", lowercasestring)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "concatenate the following strings and print the result\n",
+    "s1 = 'python '\n",
+    "s2 = 'is '\n",
+    "s3 = 'great.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "s1 = 'python '\n",
+    "s2 = 'is '\n",
+    "s3 = 'great.'\n",
+    "a = s1 + s2 + s3\n",
+    "print(\"Concatenated string:\", a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "loop\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to print numbers from 1 to 10 using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1, 11):\n",
+    "    print(num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to print the multiplication table of numbers from 1 to 5 using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1\n",
+      "\n",
+      "1 x 2 = 2\n",
+      "\n",
+      "1 x 3 = 3\n",
+      "\n",
+      "1 x 4 = 4\n",
+      "\n",
+      "1 x 5 = 5\n",
+      "\n",
+      "1 x 6 = 6\n",
+      "\n",
+      "1 x 7 = 7\n",
+      "\n",
+      "1 x 8 = 8\n",
+      "\n",
+      "1 x 9 = 9\n",
+      "\n",
+      "1 x 10 = 10\n",
+      "\n",
+      "2 x 1 = 2\n",
+      "\n",
+      "2 x 2 = 4\n",
+      "\n",
+      "2 x 3 = 6\n",
+      "\n",
+      "2 x 4 = 8\n",
+      "\n",
+      "2 x 5 = 10\n",
+      "\n",
+      "2 x 6 = 12\n",
+      "\n",
+      "2 x 7 = 14\n",
+      "\n",
+      "2 x 8 = 16\n",
+      "\n",
+      "2 x 9 = 18\n",
+      "\n",
+      "2 x 10 = 20\n",
+      "\n",
+      "3 x 1 = 3\n",
+      "\n",
+      "3 x 2 = 6\n",
+      "\n",
+      "3 x 3 = 9\n",
+      "\n",
+      "3 x 4 = 12\n",
+      "\n",
+      "3 x 5 = 15\n",
+      "\n",
+      "3 x 6 = 18\n",
+      "\n",
+      "3 x 7 = 21\n",
+      "\n",
+      "3 x 8 = 24\n",
+      "\n",
+      "3 x 9 = 27\n",
+      "\n",
+      "3 x 10 = 30\n",
+      "\n",
+      "4 x 1 = 4\n",
+      "\n",
+      "4 x 2 = 8\n",
+      "\n",
+      "4 x 3 = 12\n",
+      "\n",
+      "4 x 4 = 16\n",
+      "\n",
+      "4 x 5 = 20\n",
+      "\n",
+      "4 x 6 = 24\n",
+      "\n",
+      "4 x 7 = 28\n",
+      "\n",
+      "4 x 8 = 32\n",
+      "\n",
+      "4 x 9 = 36\n",
+      "\n",
+      "4 x 10 = 40\n",
+      "\n",
+      "5 x 1 = 5\n",
+      "\n",
+      "5 x 2 = 10\n",
+      "\n",
+      "5 x 3 = 15\n",
+      "\n",
+      "5 x 4 = 20\n",
+      "\n",
+      "5 x 5 = 25\n",
+      "\n",
+      "5 x 6 = 30\n",
+      "\n",
+      "5 x 7 = 35\n",
+      "\n",
+      "5 x 8 = 40\n",
+      "\n",
+      "5 x 9 = 45\n",
+      "\n",
+      "5 x 10 = 50\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(1, 6):\n",
+    "    for j in range(1, 11):\n",
+    "        print(f\"{i} x {j} = {i * j}\")    \n",
+    "         \n",
+    "         \n",
+    "        print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to count the number of vowels in a given string using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
