--- a/practice/list.ipynb
+++ b/practice/list.ipynb
@@ -457,7 +457,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = (1,2,3,4,5,6,7)\n",
+    "print(a, type(a))\n",
+    "b =1 ,2,3,4\n",
+    "print(b,type(b))\n",
+    "c=(1,)\n",
+    "print(c)\n",
+    "d = (1)\n",
+    "e = tuple[(1,2,3,4,5,6,7)]\n",
+    "print(e,type(e))"
+   ]
   }
  ],
  "metadata": {
