--- a/practice/funtions.ipynb
+++ b/practice/funtions.ipynb
@@ -251,6 +251,50 @@
     "f(x) = x**2 + 10\n",
     "g(x,y) = x*2 * y*2 - x*y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 8, 27, 64, 125, 216]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3,4,5,6]\n",
+    "x3 = list(map(lambda i : i**3, x))\n",
+    "\n",
+    "# xhhh\n",
+    "x3 = [i**3 for i in x]\n",
+    "print(x3)\n",
+    "#ll\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (188503282.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    x = [1,2,\"a\",\"b\", 3, \"2\", 4, , 5 , 6]\u001b[0m\n\u001b[1;37m                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,\"a\",\"b\", 3, \"2\", 4, , 5 , 6]\n",
+    "nums = filter(lambda i:isinstance(i,int),x)\n",
+    "nums = list(nums) ##set \n",
+    "print(nums)"
+   ]
   }
  ],
  "metadata": {
