--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,18 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m],[\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m],[\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m10\u001b[39m]])\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(b\u001b[38;5;241m.\u001b[39mshape)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3)\n"
      ]
     }
    ],
@@ -160,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,18 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m r1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(r1)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-5  2  2  2  3]\n",
+      " [-1  2 -2 -1 -5]\n",
+      " [-3 -3 -3 -1 -2]\n",
+      " [-3  5  4  4  0]\n",
+      " [-5 -5 -2 -2  1]]\n"
      ]
     }
    ],
@@ -217,72 +213,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0. ,  0.5,  1. ,  1.5,  2. ,  2.5,  3. ,  3.5,  4. ,  4.5,  5. ,\n",
-       "        5.5,  6. ,  6.5,  7. ,  7.5,  8. ,  8.5,  9. ,  9.5, 10. , 10.5,\n",
-       "       11. , 11.5, 12. , 12.5, 13. , 13.5, 14. , 14.5, 15. , 15.5, 16. ,\n",
-       "       16.5, 17. , 17.5, 18. , 18.5, 19. , 19.5, 20. , 20.5, 21. , 21.5,\n",
-       "       22. , 22.5, 23. , 23.5, 24. , 24.5, 25. , 25.5, 26. , 26.5, 27. ,\n",
-       "       27.5, 28. , 28.5, 29. , 29.5, 30. , 30.5, 31. , 31.5, 32. , 32.5,\n",
-       "       33. , 33.5, 34. , 34.5, 35. , 35.5, 36. , 36.5, 37. , 37.5, 38. ,\n",
-       "       38.5, 39. , 39.5, 40. , 40.5, 41. , 41.5, 42. , 42.5, 43. , 43.5,\n",
-       "       44. , 44.5, 45. , 45.5, 46. , 46.5, 47. , 47.5, 48. , 48.5, 49. ,\n",
-       "       49.5])"
+       "array([ 0,  5, 10, 15, 20, 25, 30, 35, 40, 45])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#start , stop , gap\n",
-    "np.arange(0,50, .5)"
+    "np.arange(0,50, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.        ,  0.50505051,  1.01010101,  1.51515152,  2.02020202,\n",
-       "        2.52525253,  3.03030303,  3.53535354,  4.04040404,  4.54545455,\n",
-       "        5.05050505,  5.55555556,  6.06060606,  6.56565657,  7.07070707,\n",
-       "        7.57575758,  8.08080808,  8.58585859,  9.09090909,  9.5959596 ,\n",
-       "       10.1010101 , 10.60606061, 11.11111111, 11.61616162, 12.12121212,\n",
-       "       12.62626263, 13.13131313, 13.63636364, 14.14141414, 14.64646465,\n",
-       "       15.15151515, 15.65656566, 16.16161616, 16.66666667, 17.17171717,\n",
-       "       17.67676768, 18.18181818, 18.68686869, 19.19191919, 19.6969697 ,\n",
-       "       20.2020202 , 20.70707071, 21.21212121, 21.71717172, 22.22222222,\n",
-       "       22.72727273, 23.23232323, 23.73737374, 24.24242424, 24.74747475,\n",
-       "       25.25252525, 25.75757576, 26.26262626, 26.76767677, 27.27272727,\n",
-       "       27.77777778, 28.28282828, 28.78787879, 29.29292929, 29.7979798 ,\n",
-       "       30.3030303 , 30.80808081, 31.31313131, 31.81818182, 32.32323232,\n",
-       "       32.82828283, 33.33333333, 33.83838384, 34.34343434, 34.84848485,\n",
-       "       35.35353535, 35.85858586, 36.36363636, 36.86868687, 37.37373737,\n",
-       "       37.87878788, 38.38383838, 38.88888889, 39.39393939, 39.8989899 ,\n",
-       "       40.4040404 , 40.90909091, 41.41414141, 41.91919192, 42.42424242,\n",
-       "       42.92929293, 43.43434343, 43.93939394, 44.44444444, 44.94949495,\n",
-       "       45.45454545, 45.95959596, 46.46464646, 46.96969697, 47.47474747,\n",
-       "       47.97979798, 48.48484848, 48.98989899, 49.49494949, 50.        ])"
+       "array([ 0.        ,  5.55555556, 11.11111111, 16.66666667, 22.22222222,\n",
+       "       27.77777778, 33.33333333, 38.88888889, 44.44444444, 50.        ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#start, stop number of item\n",
-    "np.linspace(0,50 , 100)"
+    "np.linspace(0,50 , 10)"
    ]
   },
   {
@@ -307,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,16 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.045663464127647\n",
-      "[0.85294365 1.45076117 1.74195864]\n",
-      "[2.34783343 1.69783003]\n"
+      "3.579099786961054\n",
+      "[1.0358932  1.50860005 1.03460653]\n",
+      "[1.07869671 2.50040308]\n",
+      "0.5965166311601756\n",
+      "0.9814443884068452\n",
+      "0.4074860409699884\n",
+      "0.16604487358539508\n"
      ]
     }
    ],
@@ -343,23 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[51 13 67 29 51]\n",
-      " [43 15 76 16 74]\n",
-      " [64 20 33 76 53]\n",
-      " [83 44 86 77 74]\n",
-      " [76 90 45 31 14]]\n",
-      "[[51 43 64 83 76]\n",
-      " [13 15 20 44 90]\n",
-      " [67 76 33 86 45]\n",
-      " [29 16 76 77 31]\n",
-      " [51 74 53 74 14]]\n",
+      "[[95 82 89 57 14]\n",
+      " [14 88 42 87 52]\n",
+      " [39 18 23 94 63]\n",
+      " [38 18 18 87 80]\n",
+      " [95 45 83 21 42]]\n",
+      "[[95 14 39 38 95]\n",
+      " [82 88 18 18 45]\n",
+      " [89 42 23 18 83]\n",
+      " [57 87 94 87 21]\n",
+      " [14 52 63 80 42]]\n",
       "flattened\n"
      ]
     }
@@ -373,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -394,9 +367,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 7], [8, 9], [2, 5], [6, 9]]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(a \u001b[38;5;241m+\u001b[39m b) \n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a \u001b[38;5;241m-\u001b[39m b)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m7\u001b[39m \u001b[38;5;241m/\u001b[39m b)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(a \u001b[38;5;241m*\u001b[39m b)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+     ]
+    }
+   ],
    "source": [
     "print(a + b) \n",
     "print(a - b)\n",
@@ -408,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
